--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
         <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
         
         {% if site.logo %}
-          <img style="border-radius: 10%; max-height: 40vh;width: 73%;margin-left: 80%; max-width: 30ch;" src="{{site.logo | relative_url}}" alt="Logo" />
+          <img style="border-radius: 10%; max-height: 40vh;width: 73%;margin-left: 40px; max-width: 30ch;" src="{{site.logo | relative_url}}" alt="Logo" />
         {% endif %}
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
