--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,13 +17,13 @@
         <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
         
         {% if site.logo %}
-          <img style="border-radius: 10%; max-height: 40vh;width: 73%; max-width: 30ch;" src="{{site.logo | relative_url}}" alt="Logo" />
+          <img style="border-radius: 50%; max-height: 23vh" src="{{site.logo | relative_url}}" alt="Logo" />
         {% endif %}
 
-        
+        <p>{{ site.description | default: site.github.project_tagline }}</p>
 
         {% if site.github.is_project_page %}
-        <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <!-- <small>{{ site.github.repository_nwo }}</small> --></a></p>
+        <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
         {% endif %}
 
         {% if site.github.is_user_page %}
