--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
         {% if site.logo %}
           <img style="border-radius: 20%;
           width: 152px;
-          height: 210px;
+          height: 210px;""
           margin-left: 2px;" src="{{site.logo | relative_url}}" alt="Logo" />
         {% endif %}
 
