--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,14 +19,14 @@
         {% if site.logo %}
           <img style="border-radius: 20%;
           width: 152px;
-          height: 210px;""
+          height: 210px;
           margin-left: 2px;" src="{{site.logo | relative_url}}" alt="Logo" />
         {% endif %}
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
         {% if site.github.is_project_page %}
-        <p class="view"><a href="{{ site.github.owner_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
+        <p class="view"><a href="{{ site.github.repository }}">View the Projects on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
         {% endif %}
 
         {% if site.github.is_user_page %}
